# SolanaBond

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
app/: package-lock.json  package.json
app/app/[lang]/: layout.tsx
app/components/CustomNavbar/: index.tsx
app/constants/: localesContent.ts
app/context/: jobFormDataContext.tsx
blink/: config.ts  package-lock.json  package.json  server.ts
blink/actions/: addFund.ts
docs/portfolio_management/: all.html  constant.ID_CONST.html  fn.check_id.html  fn.entry.html  fn.entrypoint.html  fn.id.html  fn.id_const.html  index.html  sidebar-items.js  static.ID.html
docs/portfolio_management/accounts/: index.html  sidebar-items.js  struct.CreateBond.html  struct.Fund.html  struct.Initialize.html  struct.RedeemWrappedWithPayload.html  struct.RegisterForeignContract.html  struct.SendWrappedWithPayload.html  struct.Take.html  (+2 more)
evm/: Bond.sol
programs/portfolio_management/: Cargo.toml
programs/portfolio_management/src/: constants.rs  error.rs  errors.rs  lib.rs  message.rs
programs/portfolio_management/src/context/: create.rs  fund.rs  mod.rs  take.rs  trade.rs
programs/portfolio_management/src/state/: invester.rs  investor.rs  mod.rs
programs/portfolio_management/src/token_bridge/: constants.rs  error.rs  instructions.rs  mod.rs
programs/portfolio_management/src/token_bridge/context/: initialize.rs  mod.rs  redeem_wrapped_with_payload.rs  register_foreign_contract.rs  send_wrapped_with_payload.rs  update_relayer_fee.rs
programs/portfolio_management/src/token_bridge/state/: foreign_contract.rs  mod.rs  redeemer_config.rs  sender_config.rs
tests/: portfolio_management.ts
(+137 files in other folders)
