[workspace]
members = ["programs/*", "modules/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5", features = [
    "init-if-needed",
] }
anchor-spl = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5", features = [
    "metadata",
] }
#pyth-solana-receiver-sdk = "0.3.1"
#pyth-solana-receiver-sdk = { version = "0.3.1", git = "https://github.com/pyth-network/pyth-crosschain" ,rev = "ba27ebfa1f1b497fe35ca7640fe7c0093946d448" }
wormhole-io = "0.1"
