[package]
name = "portfolio_management"
version = "0.1.0"
description = "Solana Bond"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portfolio_management"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "wormhole-anchor-sdk/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", default-features = false, features = [
  "token-bridge"
] }
wormhole-io = { workspace = true }
